overflow fix on long item names/stats

--- a/css/common.css
+++ b/css/common.css
@@ -50,7 +50,7 @@ th.correct_group {
     display: none;
 }
 
-.stats {
+.mods .stats {
     white-space: pre;
 }
 
